; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_InitCartridge.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_InitCartridge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@CARTRIDGE_main = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@Atari800_machine_type = common dso_local global i64 0, align 8
@Atari800_MACHINE_5200 = common dso_local global i64 0, align 8
@MEMORY_ram_size = common dso_local global i32 0, align 4
@Atari800_MACHINE_XLXE = common dso_local global i64 0, align 8
@active_cart = common dso_local global %struct.TYPE_7__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @InitCartridge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InitCartridge(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = call i32 @PreprocessCart(%struct.TYPE_7__* %4)
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = call i32 @ResetCartState(%struct.TYPE_7__* %6)
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %9 = icmp eq %struct.TYPE_7__* %8, @CARTRIDGE_main
  br i1 %9, label %10, label %36

10:                                               ; preds = %1
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @CARTRIDGE_main, i32 0, i32 0), align 4
  %12 = call i32 @CartIsFor5200(i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = load i64, i64* @Atari800_machine_type, align 8
  %17 = load i64, i64* @Atari800_MACHINE_5200, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i64, i64* @Atari800_MACHINE_5200, align 8
  %21 = call i32 @Atari800_SetMachineType(i64 %20)
  store i32 16, i32* @MEMORY_ram_size, align 4
  %22 = call i32 (...) @Atari800_InitialiseMachine()
  br label %35

23:                                               ; preds = %15, %10
  %24 = load i32, i32* %3, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %34, label %26

26:                                               ; preds = %23
  %27 = load i64, i64* @Atari800_machine_type, align 8
  %28 = load i64, i64* @Atari800_MACHINE_5200, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %26
  %31 = load i64, i64* @Atari800_MACHINE_XLXE, align 8
  %32 = call i32 @Atari800_SetMachineType(i64 %31)
  store i32 64, i32* @MEMORY_ram_size, align 4
  %33 = call i32 (...) @Atari800_InitialiseMachine()
  br label %34

34:                                               ; preds = %30, %26, %23
  br label %35

35:                                               ; preds = %34, %19
  br label %36

36:                                               ; preds = %35, %1
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** @active_cart, align 8
  %39 = icmp eq %struct.TYPE_7__* %37, %38
  br i1 %39, label %40, label %42

40:                                               ; preds = %36
  %41 = call i32 (...) @MapActiveCart()
  br label %42

42:                                               ; preds = %40, %36
  ret void
}

declare dso_local i32 @PreprocessCart(%struct.TYPE_7__*) #1

declare dso_local i32 @ResetCartState(%struct.TYPE_7__*) #1

declare dso_local i32 @CartIsFor5200(i32) #1

declare dso_local i32 @Atari800_SetMachineType(i64) #1

declare dso_local i32 @Atari800_InitialiseMachine(...) #1

declare dso_local i32 @MapActiveCart(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
